--- a/Esercizio 5/summarization.ipynb
+++ b/Esercizio 5/summarization.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,67 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"def disambiguate_word_context(weighted_context):\\n    synsets_topic = []\\n    total_weight = 0\\n    for (word_topic, weight) in weighted_context:\\n        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\\n        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\\n        if synset_word_context is not None:\\n            synsets_topic.append((synset_word_context, weight))\\n            total_weight += weight\\n    return synsets_topic, total_weight\""
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''def disambiguate_word_context(weighted_context):\n",
-    "    synsets_topic = []\n",
-    "    total_weight = 0\n",
-    "    for (word_topic, weight) in weighted_context:\n",
-    "        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\n",
-    "        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\n",
-    "        if synset_word_context is not None:\n",
-    "            synsets_topic.append((synset_word_context, weight))\n",
-    "            total_weight += weight\n",
-    "    return synsets_topic, total_weight'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"def disambiguate_word_context(weighted_context):\\n    synsets_topic = []\\n    total_weight = 0\\n    for (word_topic, weight) in weighted_context:\\n        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\\n        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\\n        if synset_word_context is not None:\\n            synsets_topic.append((synset_word_context, weight))\\n            total_weight += weight\\n    return synsets_topic, total_weight\""
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''def disambiguate_word_context(weighted_context):\n",
-    "    synsets_topic = []\n",
-    "    total_weight = 0\n",
-    "    for (word_topic, weight) in weighted_context:\n",
-    "        synset_word_context = simplified_lesk(get_babelnet_synset_by_word(word_topic), set([tupla[0] for tupla in weighted_context if tupla[0] != word_topic]))#disambiguo il termine del topic utilizzando lesk, in cui come contesto di disambiguazione utilizzo il contesto eccetto la parola corrente\n",
-    "        print('il synset della parola del contesto:',word_topic, ' è -> ', synset_word_context)\n",
-    "        if synset_word_context is not None:\n",
-    "            synsets_topic.append((synset_word_context, weight))\n",
-    "            total_weight += weight\n",
-    "    return synsets_topic, total_weight'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +538,7 @@
        "\"def weighted_overlap(sentence, weighted_context):\\n    numeratore = 0\\n    for word in sentence:\\n        #check if word is in first column of key_words\\n        if word in [x[0] for x in weighted_context]:\\n            #print(f'{word} in key_words')\\n            #get index of word in key_words\\n            index = [x[1] for x in weighted_context if x[0] == word][0]\\n            #print(f'index: {index}')\\n\\n            numeratore += 1/(index)\\n            #print('\\n')\\n       # else:\\n            #print(f'{word} not in key_words')\\n            #print('\\n')\\n\\n    i = 1\\n    denominatore = 0\\n    for word in weighted_context:\\n        denominatore += 1/(2*i)\\n        i += 1\\n\\n    return numeratore/denominatore\""
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +622,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Main"
+    "## Valutazione\n",
+    "\n",
+    "la valutazione può essere eseguita sulla base di due metriche complementari\n",
+    "- BLEU (bilingual evaluation understudy) per quanto riguarda la precision\n",
+    "- ROUGE (Recall-Oriented Understudy for Gisting Evaluation) per quanto riguarda la recall"
    ]
   },
   {
@@ -705,7 +649,7 @@
     "\n",
     "# prendo il titolo e ottengo i sensi corretti dei token del titolo\n",
     "bn_ids = get_sentence_babelnet_ids(file_name, title_preprocessed)\n",
-    "title_senses = get_best_senses(bn_ids, context_for_wsd_title)\n"
+    "title_senses = get_best_senses(bn_ids, context_for_wsd_title)"
    ]
   },
   {
@@ -717,7 +661,8 @@
     "# ottenimento del topic\n",
     "title_nasari_vectors = get_nasari_vectors_by_senses(title_senses, nasari_vectors)\n",
     "weighted_topic = get_weighted_topic(title_nasari_vectors)\n",
-    "weighted_topic_vectors = get_nasari_vector_for_topic(title_nasari_vectors, weighted_topic, nasari_vectors)"
+    "weighted_topic_vectors = get_nasari_vector_for_topic(title_nasari_vectors, weighted_topic, nasari_vectors)\n",
+    "total_weight = get_total_weight(weighted_topic_vectors)"
    ]
   },
   {
@@ -726,55 +671,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_weight = get_total_weight(weighted_topic_vectors)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peso frase 0: 0.3159337196388161\n",
-      "peso frase 1: 0.2381659527623258\n",
-      "peso frase 2: 0.19465909594398204\n",
-      "peso frase 3: 0.2035473338165611\n",
-      "peso frase 4: 0.1928765340928231\n",
-      "peso frase 5: 0.3230059199680386\n",
-      "peso frase 6: 0.1425373048861105\n",
-      "peso frase 7: 0.16014518339330142\n",
-      "peso frase 8: 0.19928189826976236\n",
-      "peso frase 9: 0.25549596236165895\n",
-      "peso frase 10: 0.18881866315180698\n",
-      "peso frase 11: 0.16668611956573973\n",
-      "peso frase 12: 0.23970973455875233\n",
-      "peso frase 13: 0.22384288620772183\n",
-      "peso frase 14: 0.20821751690604653\n",
-      "peso frase 15: 0.2243162275822586\n",
-      "peso frase 16: 0.15012066198538454\n",
-      "peso frase 17: 0.20564268098807262\n",
-      "peso frase 18: 0.18012321652394706\n",
-      "peso frase 19: 0.19205710057614356\n"
-     ]
-    }
-   ],
-   "source": [
-    "summary = make_summarization(text, text_preprocessed, weighted_topic_vectors, total_weight, nasari_vectors)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Valutazione\n",
-    "\n",
-    "la valutazione può essere eseguita sulla base di due metriche complementari\n",
-    "- BLEU (bilingual evaluation understudy) per quanto riguarda la precision\n",
-    "- ROUGE (Recall-Oriented Understudy for Gisting Evaluation) per quanto riguarda la recall"
+    "automatic_sum = make_summarization(text, text_preprocessed, weighted_topic_vectors, total_weight, nasari_vectors)"
    ]
   },
   {
@@ -802,11 +699,10 @@
     "file_name_manual_sum = 'Andy-Warhol-manual-sum'\n",
     "\n",
     "_, _, manual_sum, _ = open_text(file_name_manual_sum)\n",
-    "automatic_sum = make_summarization(text, text_preprocessed, weighted_context)\n",
     "\n",
     "count = 0\n",
     "for line in automatic_sum:\n",
-    "    if (line in manual_sum):\n",
+    "    if line in manual_sum:\n",
     "        count += 1\n",
     "\n",
     "print(f'Precision: {count/len(automatic_sum)}')"
@@ -837,11 +733,10 @@
     "file_name_manual_sum = 'Andy-Warhol-manual-sum'\n",
     "\n",
     "_, _, manual_sum, _ = open_text(file_name_manual_sum)\n",
-    "automatic_sum = make_summarization(text, text_preprocessed, weighted_context)\n",
     "\n",
     "count = 0\n",
-    "for line in automatic_sum:\n",
-    "    if (line in manual_sum):\n",
+    "for line in manual_sum:\n",
+    "    if line in automatic_sum:\n",
     "        count += 1\n",
     "\n",
     "print(f'Recall: {count/len(manual_sum)}')"
