--- a/Esercizio 2/mapping.ipynb
+++ b/Esercizio 2/mapping.ipynb
@@ -30,11 +30,11 @@
     "    - [x] Process_continue\n",
     "\n",
     "- Frame loiacONO\n",
-    "    - [] Rite\n",
-    "\t- [] Ammunition\n",
-    "\t- [] Relating_concepts\n",
-    "\t- [] Temporal_collocation\n",
-    "\t- [] Compliance"
+    "    - [x] Rite\n",
+    "\t- [x] Ammunition\n",
+    "\t- [x] Compliance\n",
+    "\t- [x] Renunciation\n",
+    "\t- [x] Evading"
    ]
   },
   {
